--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: url("https://images.unsplash.com/photo-1481238613160-f39d2bd78dea?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5a0e846bc05a30438b5e08bab2fc5b43&auto=format&fit=crop&w=1050&q=80");
+    background: url("https://images.unsplash.com/photo-1481238613160-f39d2bd78dea?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5a0e846bc05a30438b5e08bab2fc5b43&auto=format&fit=crop&w=1050&q=80") no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
